unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>asp04__Account_Name__c</fullName>
    <inlineHelpText>Cardholder&#39;s name or name on the bank account</inlineHelpText>
    <label>Account Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>