unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Amount__c.field-meta.xml
<CustomField>
    <fullName>asp04__Amount__c</fullName>
    <inlineHelpText>The monetary value of the payment</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>