unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Asperato_Reference__c.field-meta.xml
<CustomField>
    <fullName>asp04__Asperato_Reference__c</fullName>
    <inlineHelpText>A unique reference string to this payment transaction generated by Asperato</inlineHelpText>
    <label>Asperato Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>