unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Authorisation__c.field-meta.xml
<CustomField>
    <fullName>asp04__Authorisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the related Authorisation</inlineHelpText>
    <label>Authorisation</label>
    <referenceTo>asp04__Authorisation__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>