unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Authorisation_Status__c.field-meta.xml
<CustomField>
    <fullName>asp04__Authorisation_Status__c</fullName>
    <formula>IF( ISPICKVAL(asp04__Authorisation__r.asp04__Status__c, &quot;&quot;), &quot;Not set up yet&quot;, TEXT(asp04__Authorisation__r.asp04__Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The status of an attached Authorisation if it exists</inlineHelpText>
    <label>Authorisation Status</label>
    <type>Text</type>
</CustomField>