unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Batch_Identifier__c.field-meta.xml
<CustomField>
    <fullName>asp04__Batch_Identifier__c</fullName>
    <inlineHelpText>Internal batch identifier (do not display)</inlineHelpText>
    <label>Batch Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>