unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Billing_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>asp04__Billing_Address_Country__c</fullName>
    <inlineHelpText>For individual payments: use individual billing address country.
For company payments: use the company billing address country</inlineHelpText>
    <label>Billing Address Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>