unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Billing_Address_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>asp04__Billing_Address_PostalCode__c</fullName>
    <inlineHelpText>For individual payments: use individual billing address postal code.
For company payments: use the company billing address postal code</inlineHelpText>
    <label>Billing Address PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>