unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Billing_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>asp04__Billing_Address_Street__c</fullName>
    <inlineHelpText>For individual payments: use individual billing address.
For company payments: use the company billing address</inlineHelpText>
    <label>Billing Address Street</label>
    <type>TextArea</type>
</CustomField>