unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Card_Type__c.field-meta.xml
<CustomField>
    <fullName>asp04__Card_Type__c</fullName>
    <inlineHelpText>This field is system populated dependent on the type of credit or debit card used to make the payment where applicable</inlineHelpText>
    <label>Card Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>