unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>asp04__Company_Name__c</fullName>
    <inlineHelpText>The name of the company to which the payment card or bank account is registered</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>