unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>asp04__Customer_ID__c</fullName>
    <defaultValue>$Setup.asp04__AsperatoOneSettings__c.asp04__Customer_ID__c</defaultValue>
    <inlineHelpText>This is reference field.  Do not display this field on a screen or edit its content</inlineHelpText>
    <label>Customer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>