unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>asp04__Due_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>Date on which you would like your customer to make payment or you would like to refund your customer</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>