unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Email__c.field-meta.xml
<CustomField>
    <fullName>asp04__Email__c</fullName>
    <inlineHelpText>The email address to which receipts / confirmations can be sent.</inlineHelpText>
    <label>Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>