unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Fail_Endpoint_Long__c.field-meta.xml
<CustomField>
    <fullName>asp04__Fail_Endpoint_Long__c</fullName>
    <inlineHelpText>Endpoint to use when a transaction fails</inlineHelpText>
    <label>Fail Endpoint</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>