unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__First_Name__c.field-meta.xml
<CustomField>
    <fullName>asp04__First_Name__c</fullName>
    <inlineHelpText>The customer&#39;s first name. This data will be inserted into the payment</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>