unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Frequency__c.field-meta.xml
<CustomField>
    <fullName>asp04__Frequency__c</fullName>
    <formula>If( Text( asp04__PaymentSchedule__r.asp04__Frequency__c ) == null, &#39;Single&#39;, Text( asp04__PaymentSchedule__r.asp04__Frequency__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the frequency of your payments</inlineHelpText>
    <label>Frequency</label>
    <type>Text</type>
</CustomField>