unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Is_Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>asp04__Is_Gift_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked indicates the transaction is related to a gift card</inlineHelpText>
    <label>Is Gift Card</label>
    <type>Checkbox</type>
</CustomField>