unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Pass_Thru_Parameters__c.field-meta.xml
<CustomField>
    <fullName>asp04__Pass_Thru_Parameters__c</fullName>
    <inlineHelpText>A JSON REST format list of the parameters that were passed through from the starting URL.</inlineHelpText>
    <label>Pass Thru Parameters</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>