unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>asp04__Payment_Date__c</fullName>
    <description>The date of the payment</description>
    <inlineHelpText>The date of the payment</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>