unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Payment_Route_Selected__c.field-meta.xml
<CustomField>
    <fullName>asp04__Payment_Route_Selected__c</fullName>
    <inlineHelpText>The payment route that was selected by the customer when they made the payment.</inlineHelpText>
    <label>Payment Route Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>asp04__Payment_Route_Options</valueSetName>
    </valueSet>
</CustomField>