unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Payment_Stage__c.field-meta.xml
<CustomField>
    <fullName>asp04__Payment_Stage__c</fullName>
    <label>Payment Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting submission</fullName>
                <default>true</default>
                <label>Awaiting submission</label>
            </value>
            <value>
                <fullName>Submitted for collection</fullName>
            </value>
            <value>
                <fullName>Collected from customer</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>