unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Payment_Stage_Description__c.field-meta.xml
<CustomField>
    <fullName>asp04__Payment_Stage_Description__c</fullName>
    <inlineHelpText>Information about the current payment stage.</inlineHelpText>
    <label>Payment Stage Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>