unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__PaymentSchedule__c.field-meta.xml
<CustomField>
    <fullName>asp04__PaymentSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name of the related Payment Schedule</inlineHelpText>
    <label>Payment Schedule</label>
    <referenceTo>asp04__PaymentSchedule__c</referenceTo>
    <relationshipLabel>Payments (Payment Schedule)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>