unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Process_Date__c.field-meta.xml
<CustomField>
    <fullName>asp04__Process_Date__c</fullName>
    <formula>IF( ISPICKVAL(asp04__Payment_Route_Selected__c, &#39;Direct Debit&#39;), asp04__Due_Date__c - $Setup.asp04__AsperatoOneSettings__c.asp04__BACS_Delay__c, asp04__Due_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date on which the payment will be processed taking into acccount any delays enforced by processing Direct Debits</inlineHelpText>
    <label>Process Date</label>
    <type>Date</type>
</CustomField>