unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__PSP_Repeat_Token__c.field-meta.xml
<CustomField>
    <fullName>asp04__PSP_Repeat_Token__c</fullName>
    <formula>IF( asp04__Authorisation__r.asp04__PSP_Repeat_Token__c = null, &#39;Not set up yet&#39;, asp04__Authorisation__r.asp04__PSP_Repeat_Token__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A unique token string to the authorisation generated by the payment service provider</inlineHelpText>
    <label>Payment Service Provider Repeat Token</label>
    <type>Text</type>
</CustomField>