unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Source__c.field-meta.xml
<CustomField>
    <fullName>asp04__Source__c</fullName>
    <inlineHelpText>Indicates how the original request was created.  &#39;Web&#39; shows that this was via a web page,&#39;Repeat&#39; indicates an automatic repeat payment and &#39;cardholder not presen&#39;t shows the request came from within Salesforce.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Holder not present</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>