unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Success_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>asp04__Success_Endpoint__c</fullName>
    <inlineHelpText>Endpoint to use where the transaction is successful
(This field is deprecated - use the &#39;long&#39; version instead)</inlineHelpText>
    <label>Success Endpoint (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>