unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Total_Refunded__c.field-meta.xml
<CustomField>
    <fullName>asp04__Total_Refunded__c</fullName>
    <label>Total Refunded</label>
    <summarizedField>asp04__Refund__c.asp04__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>asp04__Refund__c.asp04__Refund_Stage__c</field>
        <operation>equals</operation>
        <value>Refunded to customer</value>
    </summaryFilterItems>
    <summaryForeignKey>asp04__Refund__c.asp04__Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>