unpackaged/main/default/objects/asp04__Payment__c/fields/asp04__Transaction_Group__c.field-meta.xml
<CustomField>
    <fullName>asp04__Transaction_Group__c</fullName>
    <inlineHelpText>A code used to group individual payment records together as a single transaction unit.  All records with the same Transaction Group are related together.</inlineHelpText>
    <label>Transaction Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>