unpackaged/main/default/objects/asp04__Payment__c/fields/Bulk_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Renewal</label>
    <referenceTo>Bulk_Renewal__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>