unpackaged/main/default/objects/asp04__Payment__c/listViews/asp04__All.listView-meta.xml
<ListView>
    <fullName>asp04__All</fullName>
    <columns>NAME</columns>
    <columns>asp04__Due_Date__c</columns>
    <columns>asp04__Amount__c</columns>
    <columns>asp04__Payment_Stage__c</columns>
    <columns>asp04__Payment_Route_Selected__c</columns>
    <columns>asp04__Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>